cabal-version:      2.4
name:               scheme-parser
version:            0.1.0.0

library
    hs-source-dirs:   src
    exposed-modules:
        Scheme.Value,
        Scheme.Eval,
        Scheme.Primitives
    default-language: Haskell2010
    build-depends:
        base ^>=4.14.1.0,
        mtl ^>=2.2.2,
        parsec ^>=3.1.14.0

executable scheme-parser
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        scheme-parser
    hs-source-dirs:   app
    default-language: Haskell2010
